--- a/Resources/assets/scss/sticky.scss
+++ b/Resources/assets/scss/sticky.scss
@@ -1,12 +1,11 @@
 .add_records.is-clone {
+	position: fixed;
+	top: 0;
 	transform: translateY(-200%);
 	visibility: hidden;
 }
 
 .add_records.is-sticky {
-	position: fixed;
-	top: -2px;
-	margin-top: 10px !important;
 	visibility: visible;
 	transform: translateY(100%);
 }
